Code check-in for alignment issue
Code check-in for alignment issue

--- a/main.css
+++ b/main.css
@@ -4,27 +4,34 @@ h1 {
 h4 { 
     text-align: center;
     padding: 0;
+    margin: 0%;
 }
 h2 { 
     text-align: center;
     padding: 0;
-    color: rgb(236, 147, 147);
+    margin: 0%;
+    color: rgb(247, 37, 37);
 }
-
+div {
+    margin-top: 10px;
+  }
 
 div.ex1 {
-    background-image: url("./img/bg.jpg");
+    background-image: url("./img/banner-background-vector.jpg");
+    height: 530px;
     padding: 15px;
   }
   
 div.ex2 { 
-    background-color: white;
+    background-image: url("./img/pngtree-eiffel-tower-travel\ \(2\).jpg");
+    background-image:no-repeat;
     padding: 15px;
+    height: 300px;
   } 
 
 nav {
     text-align: center;
-    padding: 20px;
+    padding-bottom: 100px;
   }
   
   /* Style the list inside the menu */
@@ -38,10 +45,10 @@ nav li {
 li a {
     color: rgb(248, 246, 246);
     font-size: larger;
-    padding: 20px;
+    padding: 5px;
 }
 
-.container {
+.container1 {
     position: relative;
     margin: 0 -10px;
     list-style: none;
@@ -50,21 +57,15 @@ li a {
 
 .centered {
     position: absolute;
-    top: 50%;
-    left: 50%;
+    margin-left: auto;
+    top: 40%;
+    left: 35%;
     transform: translate(-50%, -50%);
   }
 
 div.gallery {
-    /* margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 300px; */
-
     flex: 0 0 218px;
-    /* float: left; */
     height: 300px;
-    /* width: 400px; */
     border-radius: 15px;
     overflow: hidden;
     position: relative;
@@ -109,17 +110,11 @@ div.gallery.img.gallery-container :hover {
     border: 1px solid #777;
   }
   
-/* div.gallery img {
-    width: auto;
-    height: auto;
-} */
+.imgMargin {
+    margin-right: 25px;
+}
 
 div.gallery1{
-    /* margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 300px; */
-
     flex: 0 0 218px;
     border-radius: 15px;
     overflow: hidden;
